# ACGM-Recover

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-DOCS  LICENSING.md  PACKAGE_MANIFEST.json  README.en.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  INSTALLATION.md  RECOVERY_MODEL.md
scripts/: bootstrap.py  build_release.py  generate_package_manifest.py  release_check.py
src/acgm_recover/: __init__.py  __main__.py  analysis.py  bundle.py  cli.py  constants.py  gitfacts.py  onboarding.py  sanitize.py  scan.py  util.py  verify.py
src/claude_code_recover/: __init__.py  __main__.py  analysis.py  bundle.py  cli.py  constants.py  gitfacts.py  onboarding.py  sanitize.py  scan.py  verify.py
tests/: helpers.py  test_analysis_bundle.py  test_analysis_internal.py  test_bootstrap.py  test_gitfacts.py  test_onboarding.py  test_recovery_readiness.py  test_sanitize.py  test_scan.py  test_source_safety.py  test_verify_contract.py
