[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-recover"
version = "0.1.0rc3"
description = "Independent Claude Code recovery tool; not affiliated with or endorsed by Anthropic"
readme = "README.en.md"
requires-python = ">=3.10"
authors = [
  { name = "johnrucnapier-sketch" }
]
license = { text = "MIT for code; CC-BY-4.0 for documentation. See LICENSING.md." }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
claude-code-recover = "claude_code_recover.cli:main"
acgm-recover = "acgm_recover.cli:main"

[project.urls]
Homepage = "https://github.com/johnrucnapier-sketch/Claude-Code-Recover"
Repository = "https://github.com/johnrucnapier-sketch/Claude-Code-Recover"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
